Adds rental list component, rental detail component,  rental service, and rental model

--- a/angular.json
+++ b/angular.json
@@ -7,8 +7,14 @@
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
-      "prefix": "app",
-      "schematics": {},
+      "prefix": "bwm",
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss",
+          "component": {},
+          "spec": false
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -28,7 +34,8 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.scss"
             ],
             "scripts": [],
             "es5BrowserSupport": true
