--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "bcrypt": "^3.0.4",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.0",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.13",
     "ngx-pipes": "^2.3.10",
     "rxjs": "^6.4.0",
